--- a/local/package.json
+++ b/local/package.json
@@ -21,8 +21,10 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.8.2",
         "admin-lte": "^3.0.0-alpha.2",
+        "bootstrap-toggle": "^2.2.2",
         "laravel-vue-pagination": "^2.3.0",
         "moment": "^2.24.0",
+        "nestable": "^0.2.0",
         "sweetalert2": "^8.10.2",
         "vform": "^1.0.0",
         "vue-progressbar": "^0.7.5"
