--- a/local/composer.json
+++ b/local/composer.json
@@ -24,7 +24,11 @@
         ],
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files": [
+            "app/Helper.php",
+            "app/Constant.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
