--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,4 +1,5 @@
 {
     "/s/app.js": "/s/app.js",
-    "/s/app.css": "/s/app.css"
+    "/s/app.css": "/s/app.css",
+    "/s/backend.css": "/s/backend.css"
 }
